--- a/frontend-react-js/Dockerfile
+++ b/frontend-react-js/Dockerfile
@@ -1,9 +1,14 @@
 FROM node:16.18
 
+WORKDIR /frontend-react-js
+
 ENV PORT=3000
 
-COPY . /frontend-react-js
-WORKDIR /frontend-react-js
-RUN npm install
+COPY package.json package.json
+RUN npm install react-scripts
+RUN npm i
+
+COPY . .
+
 EXPOSE ${PORT}
 CMD ["npm", "start"]
