--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,14 +1,9 @@
-
-vscode:
-  extensions:
-    - 42Crunch.vscode-openapi
-    - cweijan.vscode-postgresql-client2
 tasks:
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
-    init: |
-      # cd /workspace
+    before: |
+      cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
       sudo ./aws/install
@@ -19,10 +14,11 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
       sudo apt install -y postgresql-client-13 libpq-dev
-  - name: react-js
-    init: |
-      cd frontend-react-js
-      npm i
+vscode:
+  extensions:
+    - 42Crunch.vscode-openapi
+    - cweijan.vscode-postgresql-client2
+
 ports:
   - name: frontend
     port: 3000
