update pages for sign up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,8 @@ services:
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       # REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: 
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_7hqW3iySc"
-      REACT_APP_CLIENT_ID: "p4va2ookur7vv96ns571afplg"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_Zu8u9ceWJ"
+      REACT_APP_CLIENT_ID: "2mmrc8e39vbpl93gl57mp7qpr"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
