--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       AWS_DEFAULT_REGION: "us-east-1"
       ROLLBAR_ACCESS_TOKEN: ${ROLLBAR_ACCESS_TOKEN}
-
+      AWS_COGNITO_USER_POOL_ID: "us-east-1_Zu8u9ceWJ"
+      AWS_COGNITO_USER_POOL_CLIENT_ID: "2mmrc8e39vbpl93gl57mp7qpr"
     build: ./backend-flask
     ports:
       - "4567:4567"
